# django_postgresql_poetry_template

./: .gitignore  README.MD  pyproject.toml
django_postgresql_poetry_template/: manage.py
django_postgresql_poetry_template/django_postgresql_poetry_template/: asgi.py  settings.py  urls.py  wsgi.py
